[package]
name = "theme-toggle"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "HtmlElement",
    "Element",
    "MediaQueryList",
    "Storage",
    "CssStyleDeclaration",
    "HtmlDocument",
    "EventTarget",
]

[profile.release]
opt-level = "s"
lto = true
